// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// Device profile information acquired from an external source.
// If present, it's used to further validate collected data.
message DeviceProfile {
  // Latest profile update time.
  // System managed.
  google.protobuf.Timestamp update_time = 1;

  // Non-descriptive model identifier.
  // Example: "MacBookPro9,2".
  string model_identifier = 2;

  // OS version number, without the leading 'v'.
  // See the Device's os_type for the general OS category.
  // Example: "13.2.1".
  string os_version = 3;

  // OS build identifier. Augments the os_version.
  // Example: "22D68".
  string os_build = 4;

  // Known OS users (distinct from the Teleport user).
  repeated string os_usernames = 5;

  // Jamf binary version, without the leading 'v'.
  // Example: "9.27" or "10.44.1-t1677509507".
  string jamf_binary_version = 6;

  // External device identifier, for example the Jamf or Intune ID.
  string external_id = 7;

  // OS build supplemental number.
  // May match `sw_vers` BuildVersion more closely in certain situations, like
  // macOS rapid security response builds.
  // Example: "22F770820d".
  string os_build_supplemental = 8;

  // OS identifier.
  // Mainly used to differentiate Linux distros, as there is be no variation
  // for systems like macOS or Windows.
  // Example: "ubuntu", "centos", "fedora", "rhel".
  string os_id = 9;
}
